@@ -1,0 +1,1 @@
+usr/share/voctomix/voctocore/voctocore.py /usr/bin/voctocore
