@@ -1,0 +1,1 @@
+usr/share/voctomix/voctogui/voctogui.py /usr/bin/voctogui
